# ShoppingApp

./: App.cpp  App.h  CMakeLists.txt  Exceptions.h  IOManager.cpp  IOManager.h  LinkedList.h  Product.cpp  Product.h  ProductByCapacity.cpp  ProductByCapacity.h  ProductByPieces.cpp  ProductByPieces.h  ProductByWeight.cpp  ProductByWeight.h  ShoppingList.cpp  ShoppingList.h  main.cpp  stdincmd.txt
