cmake_minimum_required(VERSION 3.17)
project(ZarnowskiKrzysztof-etap3)

set(CMAKE_CXX_STANDARD 14)

add_executable(ZarnowskiKrzysztof-etap3 main.cpp Product.cpp Product.h ShoppingList.cpp ShoppingList.h App.cpp App.h IOManager.cpp IOManager.h ProductByPieces.cpp ProductByPieces.h ProductByWeight.cpp ProductByWeight.h ProductByCapacity.cpp ProductByCapacity.h LinkedList.h)